# machine-learn-pckg

./: .gitignore  LICENSE  __init__.py  learn.py  pyproject.toml  readme.md  self_learning.py  setup.cfg  utils.py
machine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
